# arcus-vesc

./: .gitignore  README.md
scripts/: launch_car_packages.sh
tf_publisher/: package.xml  setup.cfg  setup.py
tf_publisher/config/: amcl.yaml  arcus.yaml  ekf.yaml  mapper_params_online_async.yaml
tf_publisher/launch/: amcl_launch.py  ego_racecar.xacro  ekf_launch.py  hardware_bridge_launch.py  slam_launch.py
tf_publisher/tf_publisher/: tf_publisher.py
urg_node2/config/: params_ether.yaml
urg_node2/include/urg_node2/: urg_node2.hpp
urg_node2/launch/: urg_node2.launch.py
urg_node2/src/: urg_node2.cpp
vesc/vesc_ackermann/launch/: ackermann_to_vesc_node.launch.xml  vesc_to_odom_node.launch.xml
vesc/vesc_ackermann/src/: ackermann_to_vesc.cpp  vesc_to_odom.cpp
vesc/vesc_driver/include/vesc_driver/: vesc_driver.hpp
vesc/vesc_driver/params/: vesc_config.yaml
vesc/vesc_driver/src/: vesc_driver.cpp
